--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="../css/payroll_form.css">
-      <title>Employee Payroll Form</title>
-    </head>
-    <body>
-      <header class="header-content header">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/payroll_form.css">
+    <title>Employee Payroll Form</title>
+</head>
+
+<body>
+    <header class="header-content header">
         <div class="logo-content">
-          <img src="../assets/images/logo.png">
-          <div>
-            <span class="emp-text">EMPLOYEE</span><br>
-            <span class="emp-text emp-payroll">PAYROLL</span>
-          </div>
+            <img src="../assets/images/logo.png">
+            <div>
+                <span class="emp-text">EMPLOYEE</span><br>
+                <span class="emp-text emp-payroll">PAYROLL</span>
+            </div>
         </div>
-      </header>
-    </body>
+    </header>
+    <div class="form-content">
+        <form class="form" action="#" onsubmit="save();return false">
+            <div class="form-head">Employee Payroll Form</div>
+            <div class="row-content">
+                <label class="label text" for="name">Name</label>
+                <input class="input" type="text" name="name" id="name" placeholder="Enter Your Name Here" required>
+            </div>
+        </form>
+    </div>
+</body>
+
 </html>
