--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -11,52 +11,83 @@
 
 <body>
     <header class="header-content header">
-      <div class="logo-content">
-        <img src="../assets/images/logo.png">
-        <div>
-          <span class="emp-text">EMPLOYEE</span><br>
-          <span class="emp-text emp-payroll">PAYROLL</span>
+        <div class="logo-content">
+            <img src="../assets/images/logo.png">
+            <div>
+                <span class="emp-text">EMPLOYEE</span><br>
+                <span class="emp-text emp-payroll">PAYROLL</span>
+            </div>
         </div>
-      </div>
     </header>
     <div class="form-content">
-      <form class="form" action="#" onsubmit="save();return false">
-        <div class="form-head">Employee Payroll Form</div>
-        <div class="row-content">
-          <label class="label text" for="name">Name</label>
-          <input class="input" type="text" name="name" id="name" placeholder="Enter Your Name Here" required>
-        </div>
-        <div class="row-content">
-          <label class="label text">Profile Pic</label>
-          <div class="profile-radio-content">
-            <label>
-              <input type="radio" id="profile1" name="profile"
-                      value="../assets/profile-images/Ellipse -3.png" required>
-              <img class="profile" id="image1" src="../assets/profile-images/Ellipse -3.png">
-            </label>
-            <label>
-              <input type="radio" id="profile2" name="profile"
-                      value="../assets/profile-images/Ellipse -1.png" required>
-              <img class="profile" id="image2" src="../assets/profile-images/Ellipse -1.png">
-            </label>
-            <label>
-              <input type="radio" id="profile3" name="profile"
-                      value="../assets/profile-images/Ellipse -8.png" required>
-              <img class="profile" id="image3" src="../assets/profile-images/Ellipse -8.png">
-            </label>
-            <label>
-              <input type="radio" id="profile4" name="profile"
-                      value="../assets/profile-images/Ellipse -7.png" required>
-              <img class="profile" id="image4" src="../assets/profile-images/Ellipse -7.png">
-            </label>
-            <label>
-              <input type="radio" id="profile5" name="profile"
-                      value="../assets/profile-images/Ellipse -5.png" required>
-              <img class="profile" id="image5" src="../assets/profile-images/Ellipse -5.png">
-            </label>
-          </div>
-        </div>
-      </form>
+        <form class="form" action="#" onsubmit="save();return false">
+            <div class="form-head">Employee Payroll Form</div>
+            <div class="row-content">
+                <label class="label text" for="name">Name</label>
+                <input class="input" type="text" name="name" id="name" placeholder="Enter Your Name Here" required>
+            </div>
+            <div class="row-content">
+                <label class="label text">Profile Pic</label>
+                <div class="profile-radio-content">
+                    <label>
+                        <input type="radio" id="profile1" name="profile" value="../assets/profile-images/Ellipse -3.png"
+                            required>
+                        <img class="profile" id="image1" src="../assets/profile-images/Ellipse -3.png">
+                    </label>
+                    <label>
+                        <input type="radio" id="profile2" name="profile" value="../assets/profile-images/Ellipse -1.png"
+                            required>
+                        <img class="profile" id="image2" src="../assets/profile-images/Ellipse -1.png">
+                    </label>
+                    <label>
+                        <input type="radio" id="profile3" name="profile" value="../assets/profile-images/Ellipse -8.png"
+                            required>
+                        <img class="profile" id="image3" src="../assets/profile-images/Ellipse -8.png">
+                    </label>
+                    <label>
+                        <input type="radio" id="profile4" name="profile" value="../assets/profile-images/Ellipse -7.png"
+                            required>
+                        <img class="profile" id="image4" src="../assets/profile-images/Ellipse -7.png">
+                    </label>
+                    <label>
+                        <input type="radio" id="profile5" name="profile" value="../assets/profile-images/Ellipse -5.png"
+                            required>
+                        <img class="profile" id="image5" src="../assets/profile-images/Ellipse -5.png">
+                    </label>
+                </div>
+            </div>
+            <div class="row-content">
+                <label class="label text" for="gender">Gender</label>
+                <div>
+                    <input type="radio" name="gender" value="male">
+                    <label class="text" for="male">Male</label>
+                    <input type="radio" name="gender" value="female">
+                    <label class="text" for="female">Female</label>
+                </div>
+            </div>
+            <div class="row-content">
+                <label class="label text" for="department">Department</label>
+                <div>
+                    <input class="checkbox" type="checkbox" name="hr" id="hr" values="HR">
+                    <label class="text" for="hr">HR</label>
+                    <input class="checkbox" type="checkbox" name="sales" id="sales" values="Sales">
+                    <label class="text" for="sales">Sales</label>
+                    <input class="checkbox" type="checkbox" name="finance" id="finance" values="Finance">
+                    <label class="text" for="finance">Finance</label>
+                    <input class="checkbox" type="checkbox" name="engineer" id="engineer" values="Engineer">
+                    <label class="text" for="engineer">Engineer</label>
+                    <input class="checkbox" type="checkbox" name="others" id="others" values="Others">
+                    <label class="text" for="others">Others</label>
+                </div>
+            </div>
+            <div class="row-content">
+                <label class="label text" for="salary">Choose Your Salary: </label>
+                <input class="input" type="range" name="salary" id="salary" min="300000" max="700000" step="100"
+                    value="400000">
+                <output class="salary-output text" for="salary">400000</output>
+            </div>
+        </form>
     </div>
-  </body>
+</body>
+
 </html>
