--- a/pages/payroll_form.html
+++ b/pages/payroll_form.html
@@ -21,13 +21,13 @@
     </header>
     <div class="form-content">
       <form class="form" action="#" onsubmit="save();return false">
-        <div class="form-head">Employee Payroll form</div>
+        <div class="form-head">Employee Payroll Form</div>
         <div class="row-content">
           <label class="label text" for="name">Name</label>
-          <input class="input" type="text" name="name" id="name" placeholder="Enter Your Name Here" required>
+          <input class="input" type="text" name="name" id="name" placeholder="Your Name" required>
         </div>
         <div class="row-content">
-          <label class="label text">Profile Pic</label>
+          <label class="label text">Profile image</label>
           <div class="profile-radio-content">
             <label>
               <input type="radio" id="profile1" name="profile"
@@ -143,6 +143,17 @@
               <option value="2017">2017</option>
               <option value="2016">2016</option>
             </select>
+          </div>
+        </div>
+        <div class="row-content">
+          <label class="label text" for="notes">Notes</label>
+          <textarea class="input" id="notes" name="Notes" style="height: 100px;"></textarea>
+        </div>
+        <div class="buttonParent">
+          <a href="./payroll_form.html" class="resetButton button cancelButton">Cancel</a>
+          <div class="submit-reset">
+            <button type="submit" class="button submitButton" id="submitButton">Submit</button>
+            <button type="reset" class="resetButton button">Reset</button>
           </div>
         </div>
       </form>
