--- a/pages/home.html
+++ b/pages/home.html
@@ -27,34 +27,12 @@
         <a href="../pages/payroll_form.html" class="add-button">
         <img src="../assets/icons/add-24px.svg" alt="">Add User</a>
       </div>
-      <table id="disply" class="table">
-        <tr>
-          <th></th>
-          <th>Name</th>
-          <th>Gender</th>
-          <th>Department</th>
-          <th>Salary</th>
-          <th>Start Date</th>
-          <th>Actions</th>
-        </tr>
-        <tr>
-          <td>
-            <img class="profile" alt="" src="../assets/profile-images/Ellipse -2.png">
-          </td>
-          <td>Anirudh Banerjee</td>
-          <td>Male</td>
-          <td><div class="dept-label">Finance</div>
-              <div class="dept-label">Engineer</div></td>
-          <td>434299</td>
-          <td>30 Jan 2017</td>
-          <td>
-            <img id="1" onclick="removie(this)" alt="delete" 
-                  src="../assets/icons/delete-black-18dp.svg">
-            <img id="1" alt="edit" onclick="update(this)"
-                  src="../assets/icons/create-black-18dp.svg">
-          </td>
-        </tr>
+      <div id="table-main">
+      <table id="table-display" class="table">
       </table>
     </div>
+    </div>
+    <script src="../js/home.js"></script>
+    <script src="../js/EmployeePayroll.js"></script>
   </body>
 </html>
