--- a/pages/home.html
+++ b/pages/home.html
@@ -34,5 +34,6 @@
     </div>
     <script src="../js/home.js"></script>
     <script src="../js/EmployeePayroll.js"></script>
+    <script src="../js/utility.js"></script>
   </body>
 </html>
