--- a/pages/home.html
+++ b/pages/home.html
@@ -35,5 +35,6 @@
     <script src="../js/home.js"></script>
     <script src="../js/EmployeePayroll.js"></script>
     <script src="../js/utility.js"></script>
+    <script src="../js/site_properties.js"></script>
   </body>
 </html>
